--- a/angular.json
+++ b/angular.json
@@ -27,7 +27,7 @@
               "src/assets"
             ],
             "styles": [
-              "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
+              "src/oil-theme.scss",
               "src/styles.sass"
             ],
             "scripts": []
@@ -88,6 +88,7 @@
               "src/assets"
             ],
             "styles": [
+              "./src/oil-theme.scss",
               "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
               "src/styles.sass"
             ],
