--- a/package.json
+++ b/package.json
@@ -23,6 +23,13 @@
     "@angular/platform-browser": "~8.0.0",
     "@angular/platform-browser-dynamic": "~8.0.0",
     "@angular/router": "~8.0.0",
+    "@material/button": "^3.0.0",
+    "@material/drawer": "^3.0.0",
+    "@material/elevation": "^3.0.0",
+    "@material/image-list": "^3.0.0",
+    "@material/ripple": "^3.0.0",
+    "@material/textfield": "^3.0.0",
+    "@material/typography": "^3.0.0",
     "bootstrap": "^4.3.1",
     "firebase": "^6.2.4",
     "hammerjs": "^2.0.8",
